--- a/exemplos/aula3.html
+++ b/exemplos/aula3.html
@@ -84,8 +84,14 @@
 
 					Plotly.newPlot(chart, charData);
 				};
+				
+				setInterval(function() {
+
+					$scope.GetData();
+					}, 1000);
 
 			});
+	
 </script>
 </head>
 
